cmake_minimum_required(VERSION 3.16)
project(0_C___STL___)

set(CMAKE_CXX_STANDARD 17)

add_executable(0_C___STL___ main.cpp 01_string/01_字符串构造函数.cpp 01_string/02_字符串对象赋值.cpp 01_string/03_字符串遍历操作.cpp 01_string/04_字符串添加与删除.cpp 01_string/05_字符串查找与替换.cpp 01_string/06_字符串与字符互转.cpp 01_string/07_字符串大小写互转.cpp)
