cmake_minimum_required(VERSION 3.16)
project(10_day_practice)

set(CMAKE_CXX_STANDARD 17)

add_executable(10_day_practice main.cpp day_01/打印练习.cpp day_01/day01.h day_01/day01.cpp day_01/是否闰年.cpp day_01/联合体学习.cpp day_02/day02.cpp day_02/day02.h day_02/x的n次方.cpp day_02/掷骰子.cpp day_02/枚举类型.cpp day_02/求π.cpp)
