cmake_minimum_required(VERSION 3.16)
project(qianduan_c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(qianduan_c__ main.cpp "01_描述事物：自定义类型/Message.cpp" "01_描述事物：自定义类型/Message.h" 02_面向对象构建世间万物/Message.cpp 02_面向对象构建世间万物/Message.h 03_让开发者更省心的智能指针/Message.cpp 03_让开发者更省心的智能指针/Message.h 04_一句顶一万句：模板/getLargestNumber.cpp 04_一句顶一万句：模板/getLargestNumber.h 05_头等公民：函数/Function_ex.cpp 05_头等公民：函数/Function_ex.h 06_兵器库：常用的工具/tools.cpp 06_兵器库：常用的工具/tools.h)
