cmake_minimum_required(VERSION 3.24.1)
project(c_primer_plus C)

set(CMAKE_C_STANDARD 17)

add_executable(c_primer_plus main.c chapter02/chapter02.h chapter02/chapter02.c chapter02/02__12_6.c chapter02/02__12_7.c chapter02/02__12_8.c chapter03/chapter03.c chapter03/chapter03.h chapter03/03_3_8.c chapter03/03_3_10.c chapter03/03__11_1.c chapter03/03__11_2.c chapter03/03__11_4.c chapter03/03__11_5.c chapter03/03__11_6.c chapter03/03__11_7.c chapter03/03__11_8.c)
