cmake_minimum_required(VERSION 3.24.3)
project(niuke_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(niuke_cpp main.cpp head.h basic.cpp basic.h composite.cpp composite.h function.cpp function.h oop.cpp oop.h lst.cpp lst.h combined_training.cpp combined_training.h point.cpp point.h link.cpp link.h struct_and_class.cpp struct_and_class.h)
