cmake_minimum_required(VERSION 3.16)
project(01_pointer C)

set(CMAKE_C_STANDARD 11)

add_executable(01_pointer main.c 01_copy_string.c head.h 02_revers_string.c 03_pointer_arguments.c 04_high_level_point.c change_pointer.c 05_find_sub_string.c 06_二级指针做形参.c 07_二级指针练习-文件读写.c 08_array_point.c 09_point_array.c 10_allocate_memory.c 11_选择排序.c)

